# ml_zoomcamp_2025

./: .gitignore  README.md  Untitled.ipynb  dockerfile  hmwk6_Tree_Algorithms.ipynb  homework2.ipynb  homework3.ipynb  homework4.ipynb  main.py  number3.ipynb  pytorch_cnn.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
ckd_fastapi_service/: Notebook.ipynb  README.md  dockerfile  predict.py  pyproject.toml  request.py  train.py
